aks/kubernetes_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: altermaind-ai
  namespace: alter-fe
  annotations:
    sidecar.istio.io/rewriteAppHTTPProbers: "true"
  labels:
    app: alteraltermaind-aimaind
    version: v1
spec:
  replicas: 2
  minReadySeconds: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: altermaind-ai
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
        ad.datadoghq.com/tags: '{"lineofbusiness": "ai","application": "altermaind-ai", "service": "altermaind", "version":"v1"}'
        ad.datadoghq.com/altermaind-ai.logs: '[{"source":"altermaind-ai","service":"altermaind-ai"}]'
      labels:
        app: altermaind-ai
        version: v1
        release: "#{RELEASE_NUM}#"
    spec:
      containers:
        - name: altermaind-ai
          image: #{ACR}#/#{CONTAINER_REPOSITORY}#:#{IMAGE_VERSION}#
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m
              memory: 80Mi
            limits:
              cpu: 600m
              memory: 1200Mi
          ports:
            - containerPort: 3000
